--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
   <body>
     <div id="game">
       <div id="stats">
-        <div class="stat">
+        <span class="stat">
           XP: <strong><span id="xpText">0</span></strong>
-        </div>
-        <div class="stat">
+        </span>
+        <span class="stat">
           Health: <strong><span id="healthText">100</span></strong>
-        </div>
-        <div class="stat">
+        </span>
+        <span class="stat">
           Gold: <strong><span id="goldText">50</span></strong>
-        </div>
+        </span>
       </div>
       <div id="controls">
         <button id="button1">Go to store</button>
